--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,17 +1,14 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-
-    <title><%= data.page.title || "The Middleman" %></title>
-
-    <%= stylesheet_link_tag "normalize", "all" %>
-    <%= javascript_include_tag  "all" %>
-  </head>
-
-  <body class="<%= page_classes %>">
-    <%= yield %>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+  <title>Document</title>
+  <title><%= data.page.title %></title>
+  <%= stylesheet_link_tag "styles" %>
+</head>
+<body class="<%= page_classes %>">
+  <%= yield %>
+  <%= javascript_include_tag  "scripts" %>
+</body>
 </html>
