--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,7 +5,7 @@
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
   <title>Document</title>
   <title><%= data.page.title %></title>
-  <%= stylesheet_link_tag "styles" %>
+  <link href="/assets/stylesheets/styles.css" media="all" rel="stylesheet" type="text/css" />
 </head>
 <body class="<%= page_classes %>">
   <%= yield %>
