--- a/source/assets/stylesheets/_header.sass
+++ b/source/assets/stylesheets/_header.sass
@@ -41,14 +41,65 @@
   background-repeat: repeat-x
   background-image:  -webkit-linear-gradient(-45deg, $color5 25%, transparent 25%, transparent), -webkit-linear-gradient(45deg, transparent 75%, $color5 75%)
 
-.section
+section
+  +outer-container
   padding: 1rem
   line-height: 1.1rem
   color: $color8
   h2
     margin: 0 0 .5rem 0
-
+    color: $color5
 
 .about
-  h2
-    color: $color2
+
+.experience
+  +span-columns(8)
+  ol
+    list-style: none
+    padding: 0 0 0 2rem
+    // overflow-x: hidden
+    &>li
+      border: 1px solid $color7
+      position: relative
+      padding: .3rem
+      &:before
+        content: attr(data-year)
+        background-color: $color2
+        width: 1.5rem
+        height: 1.5rem
+        border-radius: 1rem
+        display: block
+        color: $color1
+        font-size: .5rem
+        line-height: 1.5rem
+        text-align: center
+        position: absolute
+        left: -2rem
+        top: calc(50% - 1rem)
+        z-index: 2
+      &:after
+        content: ""
+        display: block
+        width: .2rem
+        background-color: $color2
+        height: 100%
+        position: absolute
+        left: -1.4rem
+        top: calc(50% - 1rem)
+        z-index: 1
+      &:last-child
+        &:after
+          height: 50%
+          background-color: $color1
+
+  ul
+    list-style: none
+    li
+      +outer-container
+
+  .label
+    display: none
+  .employer
+    +span-columns(8)
+  .dates
+    +span-columns(3)
