--- a/source/assets/stylesheets/_layout.sass
+++ b/source/assets/stylesheets/_layout.sass
@@ -11,3 +11,57 @@ body
   margin: 0 auto
   margin: 0 auto
   background-color: $color1
+
+#cores
+  position: fixed
+  top: 50px
+  left: 50px
+  ul
+    padding: 1rem
+    background-color: #FFF
+  li
+    display: block
+    width: 100px
+    height: 50px
+    line-height: 50px
+    text-align: center
+    &.cor1
+      background-color: $color1
+      color: invert($color1)
+      &:before
+        content: "$color1"
+    &.cor2
+      background-color: $color2
+      color: invert($color2)
+      &:before
+        content: "$color2"
+    &.cor3
+      background-color: $color3
+      color: invert($color3)
+      &:before
+        content: "$color3"
+    &.cor4
+      background-color: $color4
+      color: invert($color4)
+      &:before
+        content: "$color4"
+    &.cor5
+      background-color: $color5
+      color: invert($color5)
+      &:before
+        content: "$color5"
+    &.cor6
+      background-color: $color6
+      color: invert($color6)
+      &:before
+        content: "$color6"
+    &.cor7
+      background-color: $color7
+      // color: invert($color7)
+      &:before
+        content: "$color7"
+    &.cor8
+      background-color: $color8
+      color: invert($color8)
+      &:before
+        content: "$color8"
