--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -147,6 +147,28 @@ title: Curriculum Vitae
         <h2>
           Skills
         </h2>
+        <ul>
+          <li>
+            Javascript
+            <progress max="10" value="9"></progress>
+          </li>
+          <li>
+            HTML
+            <progress max="10" value="10"></progress>
+          </li>
+          <li>
+            CSS
+            <progress max="10" value="10"></progress>
+          </li>
+          <li>
+            SASS
+            <progress max="10" value="10"></progress>
+          </li>
+          <li>
+            Jasmine
+            <progress max="10" value="8"></progress>
+          </li>
+        </ul>
       </div>
     </section>
 
