skills style init

--- a/source/assets/stylesheets/_header.sass
+++ b/source/assets/stylesheets/_header.sass
@@ -152,3 +152,9 @@ section
     +span-columns(12)
     color: $color3
     font-size: .8rem
+
+.skills
+  ul
+    list-style: none
+  li
+  progress
