load yaml skills

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -148,29 +148,19 @@ title: Curriculum Vitae
           Skills
         </h2>
         <ul>
+          <% data.curriculum.skills.each do |skill| %>
           <li>
-            Javascript
-            <progress max="10" value="9"></progress>
+            <%= skill.split("=")[0] %>
+            <progress max="10" value="<%= skill.split("=")[1] %>">
+              <span class="progress-value" style="width: <%= skill.split("=")[1].to_i * 10 %>%"><%= skill.split("=")[1].to_i * 10 %>%</span>
+            </progress>
           </li>
-          <li>
-            HTML
-            <progress max="10" value="10"></progress>
-          </li>
-          <li>
-            CSS
-            <progress max="10" value="10"></progress>
-          </li>
-          <li>
-            SASS
-            <progress max="10" value="10"></progress>
-          </li>
-          <li>
-            Jasmine
-            <progress max="10" value="8"></progress>
-          </li>
+          <% end %>
         </ul>
       </div>
     </section>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 
 
 </div>
