include sass partials

--- a/source/assets/stylesheets/_all.sass
+++ b/source/assets/stylesheets/_all.sass
@@ -5,6 +5,9 @@
 
 @import "_variables"
 @import "_reset"
+@import "_extras"
 @import "_layout"
 @import "_header"
+@import "_experience"
+@import "_skills"
 @import "_print"
