--- a/source/assets/stylesheets/_layout.sass
+++ b/source/assets/stylesheets/_layout.sass
@@ -1,6 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic)
 
 body
+  +font-smoothing(antialiased)
   background-color: $color3
   font-size: 15px
   padding: 3rem 0
