--- a/source/_meta-social.html.erb
+++ b/source/_meta-social.html.erb
@@ -1,20 +1,20 @@
 <!-- <title>Page Title. Maximum length 60-70 characters</title> -->
-<meta name="description" content="<%= data.meta.general.description %>" />
+<meta name="description" content="<%= data.metasocial.general.description %>" />
 
 <!-- Twitter Card data -->
-<meta name="twitter:card" content="<%= data.meta.twitter.card %>">
-<meta name="twitter:site" content="<%= data.meta.twitter.site %>">
-<meta name="twitter:title" content="<%= data.meta.twitter.title %>">
-<meta name="twitter:description" content="<%= data.meta.twitter.description %>">
-<meta name="twitter:creator" content="<%= data.meta.twitter.creator %>">
+<meta name="twitter:card" content="<%= data.metasocial.twitter.card %>">
+<meta name="twitter:site" content="<%= data.metasocial.twitter.site %>">
+<meta name="twitter:title" content="<%= data.metasocial.twitter.title %>">
+<meta name="twitter:description" content="<%= data.metasocial.twitter.description %>">
+<meta name="twitter:creator" content="<%= data.metasocial.twitter.creator %>">
 <!-- Twitter Summary card images must be at least 200x200px -->
-<meta name="twitter:image" content="<%= data.meta.twitter.image %>">
+<meta name="twitter:image" content="<%= data.metasocial.twitter.image %>">
 
 <!-- Open Graph data -->
-<meta property="og:title" content="<%= data.meta.opengraph.title %>" />
-<meta property="og:type" content="<%= data.meta.opengraph.type %>" />
-<meta property="og:url" content="<%= data.meta.opengraph.url %>" />
-<meta property="og:image" content="<%= data.meta.opengraph.image %>" />
-<meta property="og:description" content="<%= data.meta.opengraph.description %>" />
-<meta property="og:site_name" content="<%= data.meta.opengraph.site_name %>" />
-<meta property="fb:admins" content="<%= data.meta.opengraph.admins %>" />
+<meta property="og:title" content="<%= data.metasocial.opengraph.title %>" />
+<meta property="og:type" content="<%= data.metasocial.opengraph.type %>" />
+<meta property="og:url" content="<%= data.metasocial.opengraph.url %>" />
+<meta property="og:image" content="<%= data.metasocial.opengraph.image %>" />
+<meta property="og:description" content="<%= data.metasocial.opengraph.description %>" />
+<meta property="og:site_name" content="<%= data.metasocial.opengraph.site_name %>" />
+<meta property="fb:admins" content="<%= data.metasocial.opengraph.admins %>" />
