include & fix animations

--- a/source/assets/stylesheets/_all.sass
+++ b/source/assets/stylesheets/_all.sass
@@ -1,7 +1,7 @@
 @import "bourbon"
 @import "neat"
 
-@import "compass/css3"
+@import "compass"
 
 @import "_mixins"
 @import "_variables"
@@ -11,4 +11,5 @@
 @import "_header"
 @import "_experience"
 @import "_skills"
+@import "_animations"
 @import "_print"
