--- a/source/assets/stylesheets/_skills.sass
+++ b/source/assets/stylesheets/_skills.sass
@@ -2,4 +2,20 @@
   ul
     list-style: none
   li
-  progress
+  progress[value]
+    +appearance(none)
+    // +background-image(+linear-gradient(45px 45px, #900 10px, #009 30px))
+    // +background-image(linear-gradient(left top, #fff, #ddd))
+    width: 250px
+    height: 20px
+    &::-webkit-progress-bar
+      background-color: $color3
+      border-radius: 2px
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset
+    &::-webkit-progress-value
+      +animation(progress-bar 5s infinite)
+      // +linear-gradient(left top, #900, #009)
+      +background-image(linear-gradient(left, #2ac363, #cd8c14, #9c4cc2))
+      border-radius: 2px
+      background-size: 35px 20px, 100% 100%, 100% 100%
+
