split skills with/without degree values

--- a/source/localizable/_skills.html.erb
+++ b/source/localizable/_skills.html.erb
@@ -4,12 +4,21 @@
   </h2>
   <ul>
     <% data.curriculum.skills.each do |skill| %>
-    <li>
-      <%= skill.split("=")[0] %>
-      <progress max="10" value="<%= skill.split("=")[1] %>">
-        <span class="progress-value" style="width: <%= skill.split("=")[1].to_i * 10 %>%"><%= skill.split("=")[1].to_i * 10 %>%</span>
-      </progress>
-    </li>
+      <% if skill.split("=")[1].to_s != ''%>
+        <li>
+          <%= skill.split("=")[0] %>
+          <progress max="10" value="<%= skill.split("=")[1] %>">
+            <span class="progress-value" style="width: <%= skill.split("=")[1].to_i * 10 %>%"><%= skill.split("=")[1].to_i * 10 %>%</span>
+          </progress>
+        </li>
+      <% end %>
+    <% end %>
+    <% data.curriculum.skills.each do |skill| %>
+      <% if skill.split("=")[1].to_s == ''%>
+        <li>
+          <%= skill.split("=")[0] %>
+        </li>
+      <% end %>
     <% end %>
   </ul>
 </div>
