clas to skills degree item

--- a/source/localizable/_skills.html.erb
+++ b/source/localizable/_skills.html.erb
@@ -1,11 +1,11 @@
 <div class="skills">
   <h2>
-    Skills
+    <%= I18n.t("skills.title") %>
   </h2>
   <ul>
     <% data.curriculum.skills.each do |skill| %>
       <% if skill.split("=")[1].to_s != ''%>
-        <li>
+        <li class="skill-with-bar">
           <%= skill.split("=")[0] %>
           <progress max="10" value="<%= skill.split("=")[1] %>">
             <span class="progress-value" style="width: <%= skill.split("=")[1].to_i * 10 %>%"><%= skill.split("=")[1].to_i * 10 %>%</span>
