include education styles

--- a/source/assets/stylesheets/_all.sass
+++ b/source/assets/stylesheets/_all.sass
@@ -3,8 +3,9 @@
 
 @import "compass"
 
-@import "_fonts"
 @import "_mixins"
+@import "_animations"
+@import "_fonts"
 @import "_variables"
 @import "_reset"
 @import "_extras"
@@ -12,5 +13,5 @@
 @import "_header"
 @import "_experience"
 @import "_skills"
-@import "_animations"
+@import "_education"
 @import "_print"
