change sections classes for ids

--- a/source/assets/stylesheets/_header.sass
+++ b/source/assets/stylesheets/_header.sass
@@ -1,4 +1,4 @@
-.header
+#header
   +outer-container
   background-color: $color5
   padding: 2rem
@@ -17,7 +17,7 @@
       &:after
         content: "}"
 
-  .header-info
+  #header-info
     +span-columns(5)
     font-size: .8rem
     color: $color7
@@ -33,16 +33,8 @@
     a
       color: $color7
 
-.border-header
+#border-header
   height: 2rem
   +background-size(2rem 2rem)
   background-repeat: repeat-x
   background-image:  -webkit-linear-gradient(-45deg, $color5 25%, transparent 25%, transparent), -webkit-linear-gradient(45deg, transparent 75%, $color5 75%)
-
-.about
-
-.skills
-  ul
-    list-style: none
-  li
-  progress
