--- a/source/assets/stylesheets/_layout.sass
+++ b/source/assets/stylesheets/_layout.sass
@@ -7,7 +7,7 @@ body
   padding: 3rem 0
   font-family: 'Lato', sans-serif
 
-.curriculum
+#curriculum
   width: 230mm
   margin: 0 auto
   margin: 0 auto
