--- a/source/localizable/_header.html.erb
+++ b/source/localizable/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="header" itemscope itemtype="http://schema.org/Person">
+<header id="header" itemscope itemtype="http://schema.org/Person">
   <!-- <%= I18n.t("person.name") %> -->
   <div class="header-name">
     <h1 itemprop="name">
@@ -11,7 +11,7 @@
       </span>
     </p>
   </div>
-  <div class="header-info">
+  <div id="header-info">
 
     <div class="label">
       <%= I18n.t("address") %>:
@@ -62,4 +62,4 @@
   </div>
 
 </header>
-<div class="border-header"></div>
+<div id="border-header"></div>
