include partial education

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -4,7 +4,7 @@ title: Curriculum Vitae
 
 <%= partial "extras" %>
 
-<div class="curriculum">
+<div id="curriculum">
 
     <%= partial "header" %>
 
@@ -15,6 +15,12 @@ title: Curriculum Vitae
       <%= partial "experience" %>
 
       <%= partial "skills" %>
+
+    </section>
+
+    <section>
+
+      <%= partial "education" %>
 
     </section>
 
