--- a/source/assets/stylesheets/_header.sass
+++ b/source/assets/stylesheets/_header.sass
@@ -1,10 +1,10 @@
 #header
-  +outer-container
+  +row
+  +pad(3rem)
   background-color: $color5
-  padding: 2rem
 
   .header-name
-    +span-columns(7)
+    +span-columns(6)
 
     h1
       font-size: 4rem
