--- a/source/assets/stylesheets/_experience.sass
+++ b/source/assets/stylesheets/_experience.sass
@@ -2,7 +2,7 @@
   +span-columns(8)
   ol
     list-style: none
-    padding: .5rem 0 0 2rem
+    padding: .5rem 0 0 0
     // overflow-x: hidden
     &>li
       border: 1px solid lighten($color5, 20%)
