--- a/source/assets/stylesheets/_layout.sass
+++ b/source/assets/stylesheets/_layout.sass
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic)
+// @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic)
 
 body
   +font-smoothing(antialiased)
@@ -8,14 +8,15 @@ body
   font-family: 'Lato', sans-serif
 
 #curriculum
-  width: 230mm
-  margin: 0 auto
-  margin: 0 auto
+  // width: 230mm
+  +outer-container
+  // margin: 0 auto
+  // margin: 0 auto
   background-color: $color1
 
 section
-  +outer-container
-  padding: 1rem
+  +row
+  +pad(3rem)
   line-height: 1.1rem
   color: $color8
   h2
