--- a/source/assets/stylesheets/_experience.sass
+++ b/source/assets/stylesheets/_experience.sass
@@ -10,6 +10,7 @@
       padding: .3rem
       margin-bottom: .5rem
       border-radius: .2rem
+      page-break-inside: avoid
       &:hover
         background-color: lighten($color5, 35%)
         &:before
