dates experience fix

--- a/source/assets/stylesheets/_experience.sass
+++ b/source/assets/stylesheets/_experience.sass
@@ -61,7 +61,7 @@
   .label
     display: none
   .employer
-    +span-columns(8)
+    +span-columns(6 of 8)
     font-size: 1.3rem
     // font-family:/
     font-weight: bold
@@ -99,8 +99,10 @@
       &:after
         content: " }"
   .dates
-    +span-columns(3)
+    +span-columns( 2 of 8 )
+    margin-right: 0
     font-size: .8rem
+    text-align: right
 
   .ocuppation
     +span-columns(12)
